Destiny Version 1.2 - Bug Fix
Fixed the odd layout bug that happens between 768px and 756px

--- a/destiny/destiny.css
+++ b/destiny/destiny.css
@@ -96,6 +96,10 @@ footer {
     text-decoration: underline;
 }
 
+#damage-done, #damage-taken, #enemyname {
+    position: absolute;
+}
+
 /**Battle**/
 
 .void {
@@ -246,7 +250,7 @@ footer {
     }
 
     #user > *, #enemyinfo > * {
-        padding: 10px;
+        padding: 15px !important;
     }
 
     .enemyimage {
@@ -276,6 +280,10 @@ footer {
         /* display: none; */
         height: 150px;
         width: 75px;
+    }
+
+    #damage-done, #damage-taken, #enemyname {
+        position: relative;
     }
 }
 
